# project_oddyseus

./: .env.example  .gitignore  deploy.sh  docker-compose.yml
dashboard/: .env.local.example  next.config.js  package.json
dashboard/pages/: detect.js  index.js
dashboard/styles/: globals.css
gateway/: requirements.txt  start.sh  watermark.py
gateway/alembic/: env.py
gateway/alembic/versions/: 0001_initial.py  0002_watermark_fields.py
gateway/app/: auth.py  database.py  detect.py  get_assets.py  jwt_utils.py  main.py  models.py  post_generate.py  pre_generate.py  transactions.py  upload.py
gateway/tests/: conftest.py  test_auth.py  test_get_assets.py  test_pre_generate.py  test_watermark.py
policies/: test-rights-holder.yaml
policy/: requirements.txt
policy/app/: engine.py  main.py  schemas.py
registry/: Dockerfile  alembic.ini  requirements.txt  start.sh
registry/alembic/: env.py
registry/alembic/versions/: 0001_registry_init.py
registry/app/: database.py  jwt_utils.py  main.py  models.py  store.py
registry/tests/: conftest.py  test_registry.py
sdk/: README.md  pyproject.toml  setup.py
sdk/shield_sdk/: __init__.py  client.py  exceptions.py  models.py
sdk/tests/: test_integration.py
